Lokasyon alınırken 5.0 ve alt versiyonları için var olan çökme problemi düzeltildi. İzin isteme yöntemi Dexter 'a geçirildi.

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,6 +1,7 @@
 # Built application files
 *.apk
 *.ap_
+com.example.rsyazilim.rs_ihbar.utils.ApiVariables.java
 
 # Files for the ART/Dalvik VM
 *.dex
